ecmascript/parser/tests/typescript-errors/tsc/es6/destructuring/restElementWithInitializer2/input.ts.stderr
error[1186]: A rest element cannot have an initializer
 --> $DIR/tests/typescript-errors/tsc/es6/destructuring/restElementWithInitializer2/input.ts:3:2
  |
3 | [...x = a] = a;  // Error, rest element cannot have initializer
  |  ^^^

